[tool.poetry]
name = "python-fmcw"
version = "0.1.0"
description = ""
authors = ["Marat Kopytjuk <kopytjuk@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fmcw"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
